# dynamic-world

./: .flake8  .gitignore  Dockerfile  README.md  dynamic_world_tutorial.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pip-publish.yml  publish-main.yml  pull-request-check.yml  push-main-test.yml  pypi-publish.yml
Notebooks/: dynamic_world_tutorial.ipynb
Notebooks/forests/Sample/: forest_config.yml
dynamic_world/: calculations.py  configurations.py  constants.py  downloads.py  errors.py  utils.py
notebooks/: dynamic_world_tutorial.ipynb
notebooks/forests/Sample/: forest_config.yml  sample.geojson
tests/: conftest.py  test_calculations.py  test_configurations.py  test_downloads.py  test_utils.py
tests/exampleProyects/CordilleraAzul/: cordillera_azul_4326.geojson  forest_config.yml
tests/exampleProyects/Invalid/BadCarbonFactorLabel/: forest_config.yml
tests/exampleProyects/Invalid/BadCo2FactorLabel/: forest_config.yml
tests/exampleProyects/Invalid/BadDate/: forest_config.yml
tests/exampleProyects/Invalid/NoCarbonFactor/: forest_config.yml
tests/exampleProyects/Invalid/NoCo2Factor/: forest_config.yml
tests/exampleProyects/Invalid/NoFactorPixelKey/: forest_config.yml
tests/exampleProyects/Invalid/NoGeojson/: forest_config.yml
tests/exampleProyects/Invalid/NoOtherKey/: forest_config.yml  sample.geojson
tests/exampleProyects/Sample/: forest_config.yml
tests/sampleProyect/Sample/: forest_config.yml
tests/sampleProyect/Sample/2022-07-11/: Dummy_2022-01-11_2022-07-11_carbon_factor.json  (+1 more)
(+7 files in other folders)
