[tool.poetry]
name = "dynamic-world"
version = "v0.3.0" # PLaceholder, use dynamic versioning based on git tag
description = "Land-use land-cover analysis using Dynamic World App from Earth Engine"
authors = ["Reforestum team <info@reforestum.com>"]
readme = "README.md"
license = "CC-BY-4.0"
repository = "https://github.com/Reforestum/dynamic-world"
homepage= "reforestum.com"

[tool.poetry.dependencies]
geojson = "^2.5.0"
python = "^3.9"
PyYAML = "^6.0"
pydantic = "^1.9.1"
earthengine-api = "^0.1.316"
geemap = "^0.15.3"
geedim = "^1.2.0"
typer = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
black = "^22.6.0"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
